k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: corecommerce
  labels:
    name: corecommerce
    istio-injection: disabled
    pod-security.kubernetes.io/enforce: baseline
    pod-security.kubernetes.io/enforce-version: latest
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/audit-version: latest
    pod-security.kubernetes.io/warn: restricted
    pod-security.kubernetes.io/warn-version: latest
