k8s/base/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: corecommerce-web-netpol
  namespace: corecommerce
  labels:
    app: corecommerce-web
spec:
  podSelector:
    matchLabels:
      app: corecommerce-web
  
  policyTypes:
    - Ingress
    - Egress
  
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              name: kube-system
          podSelector:
            matchLabels:
              app.kubernetes.io/name: aws-load-balancer-controller
      ports:
        - protocol: TCP
          port: 80
        - protocol: TCP
          port: 8080
    
    - from:
        - namespaceSelector:
            matchLabels:
              name: corecommerce
      ports:
        - protocol: TCP
          port: 80
  
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              name: kube-system
          podSelector:
            matchLabels:
              k8s-app: kube-dns
      ports:
        - protocol: UDP
          port: 53
        - protocol: TCP
          port: 53
    
    - to:
        - ipBlock:
            cidr: 10.2.16.0/20
      ports:
        - protocol: TCP
          port: 5432
    
    - to:
        - ipBlock:
            cidr: 10.2.16.0/20
      ports:
        - protocol: TCP
          port: 6379
    
    - to:
        - ipBlock:
            cidr: 0.0.0.0/0
      ports:
        - protocol: TCP
          port: 443
